@@ -1,2 +1,3 @@
 <h4>My URI: [% burner.best_uri(story).as_string %]</h4>
+<h3>ANY: [% any = ANY(1) _ ''; any.replace('=.*$', '') %]</h3>
 <div>Licensed under the [% license %] license</div>
